[package]
name = "http-gate"
authors = ["mike"]
description = ""
version = "0.2.0"
edition = "2021"

[lib]
crate-type = [ "cdylib" ]

[dependencies]
anyhow = "1"
spin-sdk = "3.0"
serde = { version = '1.0', default-features = false, features = ['derive'] }
serde_json = { version = '1.0', default-features = false, features = ['alloc'] }
log = "0.4.22"
env_logger = "0.11.5"

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
